# Ant-Foraging

./: .gitignore  AntsConfig.h.in  CMakeLists.txt  README.md  ant.cpp  ant.h  antunittests.cpp  colorgrid.cpp  colorgrid.h  colorgridutils.cpp  colorgridutils.h  colortools.cpp  colortools.h  food.cpp  food.h  foodunittests.cpp  logic.cpp  logic.h  logicunittests.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowform.ui  pheromone.cpp  pheromone.h  pheromoneunittests.cpp  renderarea.cpp  renderarea.h  world.cpp  world.h  worldunittests.cpp
